default/objects/Comment_Version__c/Comment_Version__c.object-meta.xml
<CustomObject>
    <description>The contents of a Comment at one point in time.</description>
    <label>Comment Version</label>
    <nameField>
        <displayFormat>Comment Version {0}</displayFormat>
        <label>Comment Version #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comment Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>